--- a/wanted-poster/css/style.css
+++ b/wanted-poster/css/style.css
@@ -67,9 +67,9 @@ h1 {
 
 h2 {
     text-transform: uppercase;
-    font-size:48rem;
+    font-size:48pxrem;
     margin: 0;
-    letter-spacing: 4rem;
+    letter-spacing: 4pxrem;
     color:darkred;
     text-shadow:.09375rem .09375rem .09375rem #000;
     font-family:'Alfa Slab One', Garamond, serif;
