--- a/wanted-poster/css/style.css
+++ b/wanted-poster/css/style.css
@@ -67,9 +67,9 @@ h1 {
 
 h2 {
     text-transform: uppercase;
-    font-size:48rem;
+    font-size:48pxrem;
     margin: 0;
-    letter-spacing: 4rem;
+    letter-spacing: 4pxrem;
     color: darkred;
     text-shadow:.09375rem .09375rem .09375rem #000;
     font-family:'Alfa Slab One', Garamond, serif;
@@ -79,9 +79,9 @@ h2 {
 
 h3 {
     text-transform: uppercase;
-    font-size: 32rem;
+    font-size: 32pxrem;
     margin: 0;
-    letter-spacing: .5rem;
+    letter-spacing: .5pxrem;
     color: darkred;
     text-shadow:.09375rem .09375rem .09375rem #000;
     font-family:'Alfa Slab One', Garamond, serif;
@@ -90,14 +90,14 @@ h3 {
 }
 h4 {
     text-transform: uppercase;
-    font-size: 24rem;
+    font-size: 24pxrem;
     margin: 0;
-    letter-spacing: 4rem;
+    letter-spacing: 4pxrem;
     color: darkred;
     text-shadow:.09375rem .09375rem .09375rem #000;
     font-family:'Alfa Slab One', Garamond, serif;
     text-align:center;
-    padding-bottom: 18rem;
+    padding-bottom: 18pxrem;
 }
 h5 {
     text-transform: uppercase;
@@ -120,14 +120,14 @@ section {
  margin-top: 8rem;
 }
 p {
-    margin-bottom: 16rem;
-    margin-top: 16rem;
+    margin-bottom: 16pxrem;
+    margin-top: 16pxrem;
     margin-left: auto;
     margin-right: auto;
     padding-top: 0;
     padding-bottom: 0;
-    padding-left: 16rem;
-    padding-right: 16rem;
+    padding-left: 16pxrem;
+    padding-right: 16pxrem;
     width: 90%;
     text-align: left;
 }
@@ -140,19 +140,19 @@ img {
     margin-top: 0;
     margin-left: auto;
     margin-right: auto;
-    max-width: 800rem;
+    max-width: 800pxrem;
 }
 figure {
-    margin-bottom: 32rem;
+    margin-bottom: 32pxrem;
 }
 figcaption {
-    padding-top: 8rem;
+    padding-top: 8pxrem;
     text-align: right;
 }
 /* Footer */
 
 footer {
-    width: 32rem;
+    width: 32pxrem;
     border-style: solid;
     color: #333;
     
