--- a/wanted-poster/css/style.css
+++ b/wanted-poster/css/style.css
@@ -98,15 +98,13 @@ h4 {
     font-family:'Alfa Slab One', Garamond, serif;
     text-align:center;
     padding-bottom: 18pxrem;
+    font-weight: normal;
 }
 h5 {
-    text-transform: uppercase;
+
     font-size:16pxrem;
     margin: 0;
-    letter-spacing: .5pxrem;
     color:#FFF;
-    text-shadow:.09375rem .09375rem .09375rem #000;
-    font-family:'Alfa Slab One', Garamond, serif;
     text-align:center;
     margin-top: 4pxrem;
     padding: 8pxrem;
@@ -117,7 +115,7 @@ h5 {
 }
 /* Section & Paragraph */
 section {
- margin-top: 8rem;
+ margin-top: 8pxrem;
 }
 p {
     margin-bottom: 16pxrem;
