--- a/wanted-poster/css/style.css
+++ b/wanted-poster/css/style.css
@@ -89,6 +89,7 @@ h3 {
     font-weight: normal;
 }
 h4 {
+    
     text-transform: uppercase;
     font-size: 24pxrem;
     margin: 0;
@@ -99,6 +100,14 @@ h4 {
     text-align:center;
     padding-bottom: 18pxrem;
     font-weight: normal;
+   
+}
+h4 span {
+padding-top: 0;
+padding-bottom: 0;
+padding-left: .5rem;
+padding-right: .5rem;
+}
 }
 h5 {
 
