--- a/wanted-poster/css/style.css
+++ b/wanted-poster/css/style.css
@@ -91,8 +91,8 @@ h3 {
 span > h4 {
     padding-bottom: 0;
     padding-top: 0;
-    padding-left: 8pxrem;
-    padding-right: 8pxrem;
+    padding-left: 8rem;
+    padding-right: 8rem;
 }
 
 h4 {
