--- a/wanted-poster/css/style.css
+++ b/wanted-poster/css/style.css
@@ -88,12 +88,6 @@ h3 {
     text-align:center;
     font-weight: normal;
 }
-span > h4 {
-    padding-bottom: 0;
-    padding-top: 0;
-    padding-left: 8rem;
-    padding-right: 8rem;
-}
 
 h4 {
     
@@ -109,6 +103,10 @@ h4 {
     font-weight: normal;
    
 }
+h4 span {padding-bottom: 0;
+    padding-top: 0;
+    padding-left: 8rem;
+    padding-right: 8rem;}
 
 h5 {
 
