--- a/wanted-poster/css/style.css
+++ b/wanted-poster/css/style.css
@@ -103,10 +103,11 @@ h4 {
     font-weight: normal;
    
 }
-h4 span {padding-bottom: 0;
+h4 span {
+    padding-bottom: 0;
     padding-top: 0;
-    padding-left: 8rem;
-    padding-right: 8rem;}
+    padding-left: 8pxrem;
+    padding-right: 8pxrem;}
 
 h5 {
 
