--- a/wanted-poster/css/style.css
+++ b/wanted-poster/css/style.css
@@ -161,7 +161,13 @@ figcaption {
 /* Footer */
 
 footer {
-    width: 32pxrem;
-    color: #333;
+    padding-top: 16pxrem;
+    padding-bottom: 16pxrem;
+    padding-left: 16pxrem;
+    padding-right: 16pxrem;
+    border-top: 32pxrem, solid;
+    color: #333
+    
+    
     
 }
