--- a/wanted-poster/css/style.css
+++ b/wanted-poster/css/style.css
@@ -165,6 +165,7 @@ footer {
     padding-bottom: 16pxrem;
     padding-left: 16pxrem;
     padding-right: 16pxrem;
-    border-top: 32px solid #333;  
-    
+    border-top-style: solid;
+    border-top-width: 32pxrem;
+    border-top-color: #333;   
 }
