--- a/wanted-poster/css/style.css
+++ b/wanted-poster/css/style.css
@@ -67,9 +67,9 @@ h1 {
 
 h2 {
     text-transform: uppercase;
-    font-size:48pxrem;
+    font-size: 3rem;
     margin: 0;
-    letter-spacing: 4pxrem;
+    letter-spacing: .25rem;
     color: darkred;
     text-shadow:.09375rem .09375rem .09375rem #000;
     font-family:'Alfa Slab One', Garamond, serif;
@@ -79,7 +79,7 @@ h2 {
 
 h3 {
     text-transform: uppercase;
-    font-size: 32pxrem;
+    font-size: 2rem;
     margin: 0;
     letter-spacing: .5pxrem;
     color: darkred;
@@ -92,14 +92,15 @@ h3 {
 h4 {
     
     text-transform: uppercase;
-    font-size: 24pxrem;
+    font-size: 1.5rem;
     margin: 0;
-    letter-spacing: 4pxrem;
+    letter-spacing: .25
+        rem;
     color: darkred;
     text-shadow:.09375rem .09375rem .09375rem #000;
     font-family:'Alfa Slab One', Garamond, serif;
     text-align:center;
-    padding-bottom: 18pxrem;
+    padding-bottom: 1.125rem;
     font-weight: normal;
    
 }
@@ -113,12 +114,12 @@ h4 span {
 
 h5 {
 
-    font-size:16pxrem;
+    font-size:1rem;
     margin: 0;
     color:#FFF;
     text-align:center;
-    margin-top: 4pxrem;
-    padding: 8pxrem;
+    margin-top: .25rem;
+    padding: .5rem;
     background-color: #333;
     font-weight: normal;
 
@@ -149,13 +150,13 @@ img {
     margin-top: 0;
     margin-left: auto;
     margin-right: auto;
-    max-width: 800pxrem;
+    max-width: 50rem;
 }
 figure {
-    margin-bottom: 32pxrem;
+    margin-bottom: 2rem;
 }
 figcaption {
-    padding-top: 8pxrem;
+    padding-top: .5rem;
     text-align: right;
 }
 /* Footer */
