--- a/wanted-poster/css/style.css
+++ b/wanted-poster/css/style.css
@@ -82,7 +82,7 @@ h3 {
     font-size: 2rem;
     margin: 0;
     letter-spacing: .5pxrem;
-    color: black;
+    color: black ;
     font-family:'Alfa Slab One', Garamond, serif;
     text-align:center;
     font-weight: normal;
@@ -93,8 +93,7 @@ h4 {
     text-transform: uppercase;
     font-size: 1.5rem;
     margin: 0;
-    letter-spacing: .25
-        rem;
+    letter-spacing: .25rem;
     color: darkred ;
     text-shadow:.09375rem .09375rem .09375rem #000;
     font-family:'Alfa Slab One', Garamond, serif;
