--- a/school-site/css/style.css
+++ b/school-site/css/style.css
@@ -80,13 +80,13 @@ header, footer {
 /* Imported Typfaces */
 @font-face {
 font-family:josefinslab;
-    src: url(../fonts/josefinslab-regular) format('truetype');
+    src: url(../fonts/josefinslab-regular);
     font-weight:normal;
     font-style:normal;
 }
 @font-face {
     font-family:monsterrat
-        src: url(../fonts/monsterrat-regular) format('truetype');
+        src: url(../fonts/monsterrat-regular);
     font-weight:normal;
     font-style:normal;
 }
