--- a/school-site/css/style.css
+++ b/school-site/css/style.css
@@ -95,7 +95,7 @@ font-family:'josefinslab';
 
 /* Typography Styles */
 html {
-    font-family: 'monsterrat', sans-serif;  
+    font-family: monsterrat, sans-serif;  
     
 }
 h1 {
