--- a/school-site/css/style.css
+++ b/school-site/css/style.css
@@ -79,14 +79,14 @@ header, footer {
 
 /* Imported Typfaces */
 @font-face {
-font-family:'josefinslab';
-    src: url(../josefinslab-regular.tff) format('truetype');
+font-family:Josefinslab;
+    src: url(../fonts/josefinslab-regular.tff);
     font-weight:normal;
     font-style:normal;
 }
 @font-face {
-    font-family:'monsterrat'
-        src: url(../fonts/monsterrat-regular.tff) format('truetype');
+    font-family:Monsterrat;
+        src: url(../fonts/monsterrat-regular.tff);
     font-weight:normal;
     font-style:normal;
 }
@@ -95,12 +95,12 @@ font-family:'josefinslab';
 
 /* Typography Styles */
 html {
-    font-family: "monsterrat", sans-serif;  
+    font-family: 'Monsterrat', sans-serif;  
     
 }
 h1 {
    letter-spacing: .125rem;
-    font-family: 'josefinslab', serif;
+    font-family: 'Josefinslab', serif;
      font-weight:normal;
     font-style:normal;
     font-size: 3.75rem;
@@ -110,7 +110,7 @@ h1 {
 
 h2 {
    letter-spacing: .125rem;
-    font-family: 'josefinslab', serif;
+    font-family: 'Josefinslab', serif;
      font-weight:normal;
     font-style:normal;
     font-size: 1.5rem;
