--- a/school-site/css/style.css
+++ b/school-site/css/style.css
@@ -95,7 +95,7 @@ font-family:Josefinslab;
 
 /* Typography Styles */
 html {
-    font-family: 'Monsterrat', sans-serif;  
+    font-family: Monsterrat, Arial, sans-serif;  
     
 }
 h1 {
