--- a/school-site/css/style.css
+++ b/school-site/css/style.css
@@ -186,7 +186,7 @@ nav a {
     width: 100%;
     line-height: 3;
     text-align: center;
-    font-size: .75rem;
+    font-size: 1.125rem;
     margin-bottom: 1.5rem;
     border: solid, .0625rem, #33658A;
     
