--- a/blog/css/style.css
+++ b/blog/css/style.css
@@ -80,6 +80,7 @@ header {
     border-bottom: .0625rem solid #333;
     margin-bottom:4rem;
     padding-bottom:2rem;
+    
 }
 
 h1 {
@@ -91,17 +92,14 @@ h1 {
     margin:0;
 }
 span {
-     padding-bottom: 0;
-    padding-top: 0;
-    padding-left: .5rem;
-    padding-right: .5rem;
-    color:floralwhite;
-    background-color:brown;
-    font-size:4rem;
-    text-transform: uppercase;
+     text-transform: uppercase;
+    font-size:6rem;
+    margin: 0;
+    letter-spacing: .5rem;
+    color: brown;
     text-shadow:.09375rem .09375rem .09375rem #000;
     font-family:'Alfa Slab One', Garamond, serif;
-        
+    text-align: center;
 }
 nav {
     float:center;
