--- a/blog/css/style.css
+++ b/blog/css/style.css
@@ -96,10 +96,10 @@ span {
     font-size:6rem;
     margin: 0;
     letter-spacing: .5rem;
-    color: brown;
-    text-shadow:.09375rem .09375rem .09375rem #000;
-    font-family:'Alfa Slab One', Garamond, serif;
-    text-align: center;
+    background color: brown;
+    color:beige;
+    
+    
 }
 nav {
     float:center;
