--- a/blog/css/style.css
+++ b/blog/css/style.css
@@ -80,6 +80,7 @@ header {
     border-bottom: .0625rem solid #333;
     margin-bottom:4rem;
     padding-bottom:2rem;
+    transform: rotate(45deg);
     
 }
 
@@ -98,6 +99,7 @@ span {
     letter-spacing: .5rem;
     background color: brown;
     color:beige;
+    
     
     
 }
@@ -132,7 +134,12 @@ nav {
     
     
     
-    
+ .subsection {
+display: grid;
+grid-template-columns: repeat(3, 1fr);
+grid-column-gap: 1rem;
+
+}   
     
     
     
