--- a/blog/css/style.css
+++ b/blog/css/style.css
@@ -80,7 +80,7 @@ header {
     border-bottom: .0625rem solid #333;
     margin-bottom:4rem;
     padding-bottom:2rem;
-    transform: rotate(45deg);
+    transform: rotate(450deg) 
     
 }
 
@@ -97,8 +97,9 @@ span {
     font-size:4rem;
     margin: 0;
     letter-spacing: .5rem;
-    background color: brown;
+    background color:brown;
     color:beige;
+
     
     
     
@@ -126,7 +127,23 @@ nav {
     
     
     
-    
+  x-card {
+  width: 100%;
+}
+
+x-card:nth-child(1), x-card:nth-child(2) {
+  width: 30%;
+  float: right;
+  padding: 2rem;
+}
+
+x-card:nth-child(3) {
+  width: 30%;
+  float: right;
+  height: 100%;
+  overflow: auto;
+  padding: 2rem;
+}  
     
     
     
