--- a/blog/css/style.css
+++ b/blog/css/style.css
@@ -93,7 +93,7 @@ h1 {
     text-shadow:2px 2px 3px #333;      
     margin:0;
 }
-span {
+highlight {
      text-transform: uppercase;
     font-size:4rem;
     margin: 0;
