--- a/blog/css/style.css
+++ b/blog/css/style.css
@@ -76,12 +76,12 @@ html {
        
 } 
 
-header {border-color:brown;
-background-color:brown;
-color: white;
-border-radius: 1.25rem .75rem;
-padding: .5rem;
-font-weight: bold;
+header {
+    
+border-bottom: .0625rem solid #333;
+    margin-bottom:4rem;
+    padding-bottom:2rem;
+    transform:rotate(450deg)
 }
 
 
@@ -94,12 +94,12 @@ h1 {
     margin:0;
 }
 highlight {
-     text-transform: uppercase;
-    font-size:4rem;
-    margin: 0;
-    letter-spacing: .5rem;
-    background color:brown;
-    color:beige;
+     {border-color:brown;
+background-color:brown;
+color: white;
+border-radius: 1.25rem .75rem;
+padding: .5rem;
+font-weight: bold;
 
     
     
