--- a/blog/css/style.css
+++ b/blog/css/style.css
@@ -110,19 +110,20 @@ font-weight: bold;
          
 }
 nav {
-      padding: 0;
+      padding bottom: auto;
     margin-top: .25rem;
 }    
 
 nav a {
-    text-decoration: none;
-    display: inline-block;
-    width: 100%;
+    text-decoration:none;
+    width: 20em;
     line-height: 3;
     text-align: center;
     font-size: 1.125rem;
     margin-bottom: 1.5rem;
-    border: .0625rem, solid, #33658A;
+    border-bottom: solid;
+    word-spacing: 1rem;
+    
 }
     
     
