--- a/blog/css/style.css
+++ b/blog/css/style.css
@@ -98,7 +98,7 @@ h1 {
 
 
 
-span {
+.highlight {
      border-color:brown;
 background-color:brown;
 color: white;
@@ -112,16 +112,17 @@ font-weight: bold;
 nav {
       padding bottom: auto;
     margin-top: .25rem;
-}    
+    border-bottom: solid;
+    border-top: solid;
+
+} 
 
 nav a {
     text-decoration:none;
-    width: 20em;
     line-height: 3;
     text-align: center;
-    font-size: 1.125rem;
+    font-size: 2rem;
     margin-bottom: 1.5rem;
-    border-bottom: solid;
     word-spacing: 1rem;
     
 }
