--- a/blog/css/style.css
+++ b/blog/css/style.css
@@ -114,6 +114,8 @@ nav {
     margin-top: .25rem;
     border-bottom: solid;
     border-top: solid;
+    flex: auto;
+    
 
 } 
 
@@ -124,7 +126,7 @@ nav a {
     font-size: 2rem;
     margin-bottom: 1.5rem;
     word-spacing: 1rem;
-    
+    display: inline-block;
 }
     
     
