--- a/blog/css/style.css
+++ b/blog/css/style.css
@@ -152,12 +152,15 @@ article {
 } 
 
 p {
-     font-size: .75rem;
-    letter-spacing: .03125rem;
-    word-spacing: .125rem;
+font-size: 1rem;
+  line-height: 1.5;
 }
 
-
+main {
+     padding-left:2%;
+    padding-right:2%;
+    margin-left:14rem;
+}
 
 
 
