--- a/blog/css/style.css
+++ b/blog/css/style.css
@@ -142,7 +142,7 @@ a [href^="blog"] {
 } 
 article {
     width: 75%;
-    
+    float: 75%
 }   
   
 .article-image {
@@ -163,10 +163,10 @@ main {
 
 
 
-
 }  
 aside {
-width: 25%
+width: 25%;
+    float: 25%
     
 }   
     
