--- a/blog/css/style.css
+++ b/blog/css/style.css
@@ -128,6 +128,12 @@ nav a {
     display: inline-block;
 }
 
+nav a:nth-child(2) {
+    transform: rotate(10deg)
+        
+}
+
+
 a [href^="blog"] {
     text-decoration: line-through;
     
@@ -169,6 +175,17 @@ width: 25%;
     float: 25%
     
 }   
+
+aside:nth-child(3) {
+    width: 25%;
+    float: right;
+    
+}
+
+
+
+
+
 footer {
  text-align: right;
     
